feat:add feature product

--- a/product/index.html
+++ b/product/index.html
@@ -39,182 +39,184 @@
             </button>
             <div class="section-sidebar">
               <div class="top-content-sidebar">
-                <div class="title-sidebar">
-                  <h2>Selected Filters</h2>
+                <div class="bottom-content-sidebar">
+                  <div class="title-sidebar">
+                    <h2>Selected Filters</h2>
+                  </div>
+                  <div class="clear-sidebar">
+                    <h1>Clear All</h1>
+                  </div>
                 </div>
-                <div class="clear-sidebar">
-                  <h1>Clear All</h1>
+                <div class="sidebar-wrap">
+                  <div class="categori">
+                    <h5>Filter by Cattegory:</h5>
+                    <!-- <div class="icons">
+                      <i class="fa-solid fa-angle-down"></i>
+                    </div> -->
+                  </div>
+                  <div class="list-categori">
+                    <ul>
+                      <li>
+                        <input type="checkbox">
+                        <a href="#">Hardshell Jackets</a>
+                      </li>
+                      <li>
+                        <input type="checkbox">
+                        <a href="#">Windbreaker</a>
+                      </li>
+                      <li>
+                        <input type="checkbox">
+                        <a href="#">Vests</a>
+                      </li>
+                      <li>
+                        <input type="checkbox">
+                        <a href="#">Ski & Snowboard Jackets</a>
+                      </li>
+                      <li>
+                        <input type="checkbox">
+                        <a href="#">Casual Shoes</a>
+                      </li>
+                      <li>
+                        <input type="checkbox">
+                        <a href="#">Hiking Shoes</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-              <div class="sidebar-wrap">
-                <div class="categori">
-                  <h5>Filter by Cattegory:</h5>
-                  <!-- <div class="icons">
-                    <i class="fa-solid fa-angle-down"></i>
-                  </div> -->
+                <div class="sidear-wrap-3">
+                  <div class="title-1">
+                    <h1>Filter by Color:</h1>
+                  </div>
+                  <div class="-wrap-option-color">
+                    <ul>
+                      <li>
+                        <span
+                          class="option-color"
+                          data-color="#9be8d3"
+                          style="background-color: #000000"
+                        >
+                          <input type="checkbox" style="opacity: 0" />
+                        </span>
+                      </li>
+                      <li>
+                        <span
+                          class="option-color"
+                          data-color="#9be8d3"
+                          style="background-color: #ff0000"
+                        >
+                          <input type="checkbox" style="opacity: 0" />
+                        </span>
+                      </li>
+                      <li>
+                        <span
+                          class="option-color"
+                          data-color="#9be8d3"
+                          style="background-color: #ffbb00"
+                        >
+                          <input type="checkbox" style="opacity: 0" />
+                        </span>
+                      </li>
+                      <li>
+                        <span
+                          class="option-color"
+                          data-color="#9be8d3"
+                          style="background-color: #0004ff"
+                        >
+                          <input type="checkbox" style="opacity: 0" />
+                        </span>
+                      </li>
+                      <li>
+                        <span
+                          class="option-color"
+                          data-color="#9be8d3"
+                          style="background-color: #fdf908"
+                        >
+                          <input type="checkbox" style="opacity: 0" />
+                        </span>
+                      </li>
+                      <li>
+                        <span
+                          class="option-color"
+                          data-color="#9be8d3"
+                          style="background-color: rgb(214, 173, 173)"
+                        >
+                          <input type="checkbox" style="opacity: 0" />
+                        </span>
+                      </li>
+                      <li>
+                        <span
+                          class="option-color"
+                          data-color="#9be8d3"
+                          style="background-color: Green"
+                        >
+                          <input type="checkbox" style="opacity: 0" />
+                        </span>
+                      </li>
+                      <li>
+                        <span
+                          class="option-color"
+                          data-color="#9be8d3"
+                          style="
+                            background-image: linear-gradient(
+                              to bottom right,
+                              red,
+                              yellow
+                            );
+                          "
+                        >
+                          <input type="checkbox" style="opacity: 0" />
+                        </span>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-                <div class="list-categori">
-                  <ul>
-                    <li>
-                      <input type="checkbox">
-                      <a href="#">Hardshell Jackets</a>
-                    </li>
-                    <li>
-                      <input type="checkbox">
-                      <a href="#">Windbreaker</a>
-                    </li>
-                    <li>
-                      <input type="checkbox">
-                      <a href="#">Vests</a>
-                    </li>
-                    <li>
-                      <input type="checkbox">
-                      <a href="#">Ski & Snowboard Jackets</a>
-                    </li>
-                    <li>
-                      <input type="checkbox">
-                      <a href="#">Casual Shoes</a>
-                    </li>
-                    <li>
-                      <input type="checkbox">
-                      <a href="#">Hiking Shoes</a>
-                    </li>
-                  </ul>
+                <div class="sidebar-wrap-4">
+                  <div class="title-2">
+                    <h1>Filter by Gender:</h1>
+                  </div>
+                  <div class="option-gender">
+                    <button>
+                      <a href="#">Men</a>
+                    </button>
+                    <button>
+                      <a href="#">Women</a>
+                    </button>
+                  </div>
                 </div>
-              </div>
-              <div class="sidear-wrap-3">
-                <div class="title-1">
-                  <h1>Filter by Color:</h1>
+                <div class="sidebar-wrap-5">
+                  <div class="size">
+                    <h1>Size:</h1>
+                  </div>
+                  <div class="option-size">
+                    <button>
+                      <a href="#">S</a>
+                    </button>
+                    <button>
+                      <a href="#">M</a>
+                    </button>
+                    <button>
+                      <a href="#">L</a>
+                    </button>
+                    <button>
+                      <a href="#">XL</a>
+                    </button>
+                    <button>
+                      <a href="#">XXL</a>
+                    </button>
+                    <button>
+                      <a href="#">XXXL</a>
+                    </button>
+                  </div>
                 </div>
-                <div class="-wrap-option-color">
-                  <ul>
-                    <li>
-                      <span
-                        class="option-color"
-                        data-color="#9be8d3"
-                        style="background-color: #000000"
-                      >
-                        <input type="checkbox" style="opacity: 0" />
-                      </span>
-                    </li>
-                    <li>
-                      <span
-                        class="option-color"
-                        data-color="#9be8d3"
-                        style="background-color: #ff0000"
-                      >
-                        <input type="checkbox" style="opacity: 0" />
-                      </span>
-                    </li>
-                    <li>
-                      <span
-                        class="option-color"
-                        data-color="#9be8d3"
-                        style="background-color: #ffbb00"
-                      >
-                        <input type="checkbox" style="opacity: 0" />
-                      </span>
-                    </li>
-                    <li>
-                      <span
-                        class="option-color"
-                        data-color="#9be8d3"
-                        style="background-color: #0004ff"
-                      >
-                        <input type="checkbox" style="opacity: 0" />
-                      </span>
-                    </li>
-                    <li>
-                      <span
-                        class="option-color"
-                        data-color="#9be8d3"
-                        style="background-color: #fdf908"
-                      >
-                        <input type="checkbox" style="opacity: 0" />
-                      </span>
-                    </li>
-                    <li>
-                      <span
-                        class="option-color"
-                        data-color="#9be8d3"
-                        style="background-color: rgb(214, 173, 173)"
-                      >
-                        <input type="checkbox" style="opacity: 0" />
-                      </span>
-                    </li>
-                    <li>
-                      <span
-                        class="option-color"
-                        data-color="#9be8d3"
-                        style="background-color: Green"
-                      >
-                        <input type="checkbox" style="opacity: 0" />
-                      </span>
-                    </li>
-                    <li>
-                      <span
-                        class="option-color"
-                        data-color="#9be8d3"
-                        style="
-                          background-image: linear-gradient(
-                            to bottom right,
-                            red,
-                            yellow
-                          );
-                        "
-                      >
-                        <input type="checkbox" style="opacity: 0" />
-                      </span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="sidebar-wrap-4">
-                <div class="title-2">
-                  <h1>Filter by Gender:</h1>
-                </div>
-                <div class="option-gender">
+                <div class="apply-filter">
                   <button>
-                    <a href="#">Men</a>
+                    <a href="#">apply filter</a>
                   </button>
-                  <button>
-                    <a href="#">Women</a>
-                  </button>
+                  <div class="empty">
+                    <i class="fa-solid fa-trash-can"></i>
+                  </div>
                 </div>
-              </div>
-              <div class="sidebar-wrap-5">
-                <div class="size">
-                  <h1>Size:</h1>
                 </div>
-                <div class="option-size">
-                  <button>
-                    <a href="#">S</a>
-                  </button>
-                  <button>
-                    <a href="#">M</a>
-                  </button>
-                  <button>
-                    <a href="#">L</a>
-                  </button>
-                  <button>
-                    <a href="#">XL</a>
-                  </button>
-                  <button>
-                    <a href="#">XXL</a>
-                  </button>
-                  <button>
-                    <a href="#">XXXL</a>
-                  </button>
-                </div>
-              </div>
-              <div class="apply-filter">
-                <button>
-                  <a href="#">apply filter</a>
-                </button>
-                <div class="empty">
-                  <i class="fa-solid fa-trash-can"></i>
-                </div>
-              </div>
             </div>
             <div class="" id="overlay"></div>
           </div>
