feat: Add hero content section

--- a/index.html
+++ b/index.html
@@ -254,7 +254,66 @@
 
     <!-- Content Start -->
     <main>
-      <!-- Your content here -->
+      <section class="h-screen relative">
+        <div class="absolute inset-0 top-auto h-20 bg-black"></div>
+        <div class="h-full grid grid-cols-2 sm-grid-cols-none container">
+          <div class="flex-col justify-center gap-4">
+            <h1 class="text-6xl w-4/5 sm-text-4xl leading-tight mb-2">
+              Your Adventure Starts Here
+            </h1>
+            <p class="w-4/5 sm-w-full">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque ut
+              ducimus adipisci ex perferendis vitae doloremque nam magnam porro,
+              repellendus consequuntur.
+            </p>
+            <!-- <a
+              href="/product/index.html"
+              class="border-2 w-max border-primary rounded px-5 py-3 flex-row items-center gap-4"
+            >
+              <span class="font-medium">Explore Now</span>
+              <span class="text-xl text-primary">
+                <i class="fa-solid fa-arrow-right-long"></i>
+              </span>
+            </a> -->
+            <div class="h-20 sm-hidden"></div>
+          </div>
+          <div class="relative flex-col justify-center items-center">
+            <img
+              src="/img/hero.jpg"
+              class="w-full h-full object-cover"
+              draggable="false"
+              alt="Hero Image"
+            />
+            <div class="absolute inset-0 top-auto px-8 py-6">
+              <div class="flex-row gap-4 items-center text-white text-2xl">
+                <i class="fa-regular fa-location-dot"></i>
+                <span class="text-lg"> Alpe Devero, VB, Italia</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="h-max py-20 relative bg-black">
+        <div class="h-full container flex-col gap-6 justify-center">
+          <div class="grid grid-cols-2 sm-grid-cols-none gap-10">
+            <div class="flex-col gap-2 justify-center">
+              <h2 class="text-primary text-4xl leading-tight font-medium">
+                Trusted by over 100,000+ Clients worldwide since 2005
+              </h2>
+            </div>
+            <div class="grid grid-cols-2">
+              <div class="flex-col items-center sm-items-start gap-2 text-gray">
+                <h4 class="text-7xl sm-text-6xl leading-tight">4,5</h4>
+                <span>12,000 Ratings</span>
+              </div>
+              <div class="flex-col items-center sm-items-start gap-2 text-gray">
+                <h4 class="text-7xl sm-text-6xl leading-tight">5 M+</h4>
+                <span>Worldwide Product</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Content End -->
 
